--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt-nodejs": "^0.0.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.13",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "redis": "^3.0.2"
   },
   "scripts": {
     "dev": "nodemon src/server.js"
