--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,16 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "connect-redis": "^5.0.0",
+    "cookie-parser": "^1.4.5",
+    "dot-env": "^0.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "redis": "^3.0.2"
   },
   "scripts": {
