Updated dockerfiles and docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,25 @@ services:
         container_name: rgbMongoDB
 
     rgb_node:
-        build: .
+        build: 
+            context: ./backend/
+            dockerfile: Dockerfile
         ports:
             - 3333:3333
         container_name: rgbNode
         depends_on:
             - rgb_redis
             - rgb_mongodb
+
+    rgb_react:
+        build: 
+            context: ./frontend/
+            dockerfile: Dockerfile
+        ports:
+            - 3000:3000
+        container_name: rgbReact
+        depends_on:
+            - rgb_node
+
+
+        
